--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: cpp
 compiler: gcc
-
+install:
+  - sudo apt-get update
+  - sudo apt-get install libcppunit-dev libcppunit-1.14
 script: 
   - make
   - make test
