--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,20 @@
-dist: xenial
-sudo: false
 language: cpp
 
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - g++-7
-env:
-  - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+matrix:
+  include:
+    # works on Precise and Trusty
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-7
+      env:
+        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
 
 before_install:
-  - eval "${MATRIX_EVAL}"
+    - eval "${MATRIX_EVAL}"
 
 script:
   - make
