--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,7 +90,7 @@ set(APPLICATION_NAME ${TARGET_NAME})
 set(APPLICATION_VERSION ${VERSION})
 set(APPLICATION_ORGANIZATION "Nagrit")
 set(APPLICATION_ORGANIZATION_DOMAIN "https://github.com/acidvertigo/")
-set(INCLUDE_DIRS ${SOURCE_DIR}/include)
+set(INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/include)
 
 #-------------------------------------------------------------------------------
 #	SOURCE GROUPS
