--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,7 @@ script:
   - export CC=/usr/bin/gcc-6
   - export CXX=/usr/bin/g++-6
   - gcc -v && g++ -v && cmake --version
-  - cmake ../src
+  - mkdir -p src/build
+  - cd src/build
+  - cmake ..
   - make
