--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,6 @@ script:
   - export CXX=/usr/bin/g++-6
   - gcc -v && g++ -v && cmake --version
   - mkdir -p src/build
-  - cmake .
+  - cd src/build
+  - cmake ..
   - make
