--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,7 +120,7 @@ include_directories(${INCLUDE_DIRS})
 add_executable(${TARGET_NAME} ${SOURCE_FILES} ${RESOURCES})
 
 # link libraries
-target_link_libraries(${TARGET_NAME} ${LIBRARIES})
+target_link_libraries(BEFORE ${TARGET_NAME} ${LIBRARIES})
 
 # Use the automatically determined RPATH values
 set_target_properties(${TARGET_NAME} PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
