--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,7 +86,7 @@ set(APPLICATION_NAME ${TARGET_NAME})
 set(APPLICATION_VERSION ${VERSION})
 set(APPLICATION_ORGANIZATION "Nagrit")
 set(APPLICATION_ORGANIZATION_DOMAIN "https://github.com/acidvertigo/")
-set(INCLUDE_DIRS include)
+set(INCLUDE_DIRS include src)
 
 #-------------------------------------------------------------------------------
 #	SOURCE GROUPS
@@ -114,7 +114,7 @@ source_group(continuous-integration REGULAR_EXPRESSION ".*[.]yml")
 #-------------------------------------------------------------------------------
 
 # Set additional include directories
-include_directories(BEFORE ${INCLUDE_DIRS})
+include_directories(${INCLUDE_DIRS})
 
 # Generate the executable
 add_executable(${TARGET_NAME} ${SOURCE_FILES} ${RESOURCES})
