--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,4 @@ script:
   - export CC=/usr/bin/gcc-6
   - export CXX=/usr/bin/g++-6
   - gcc -v && g++ -v && cmake --version
-  - mkdir -p build
-  - cd build
-  - cmake .. && make
+  - cmake . && make
