--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,5 @@ script:
   - export CC=/usr/bin/gcc-6
   - export CXX=/usr/bin/g++-6
   - gcc -v && g++ -v && cmake --version
+  - mkdir build
   - cmake . && make
