--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,7 +86,7 @@ set(APPLICATION_NAME ${TARGET_NAME})
 set(APPLICATION_VERSION ${VERSION})
 set(APPLICATION_ORGANIZATION "Nagrit")
 set(APPLICATION_ORGANIZATION_DOMAIN "https://github.com/acidvertigo/")
-set(INCLUDE_DIRS ${PROJECT_SRC_DIR}/include)
+set(INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/include)
 
 
 #-------------------------------------------------------------------------------
@@ -116,6 +116,11 @@ source_group(continuous-integration REGULAR_EXPRESSION ".*[.]yml")
 
 # Set additional include directories
 include_directories(${INCLUDE_DIRS})
+
+get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRS)
+foreach(dir ${dirs})
+  message(STATUS "dir='${dir}'")
+endforeach()
 
 # Generate the executable
 add_executable(${TARGET_NAME} ${SOURCE_FILES} ${RESOURCES})
