--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,7 +146,7 @@ endif()
 
 # Now simply link against gtest or gtest_main as needed. Eg
 add_executable(example test/example.cpp)
-target_link_libraries(example gtest_main)
+target_link_libraries(example gmock_main)
 add_test(NAME example_test COMMAND example)
 
 
