--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,4 @@ script:
   - cd ../Release
   - cmake -D CMAKE_BUILD_TYPE=Release ../../ && make
   - ctest
-  - cppcheck --quiet --error-exitcode=1 ../../
+  - cppcheck --force --quiet --error-exitcode=1 ../../
