--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -31,6 +31,11 @@ if (CMAKE_VERSION VERSION_LESS 2.8.11)
 endif()
 
 # Now simply link against gtest or gtest_main as needed. Eg
+
 add_executable(example example.cpp)
+add_executable(samplerate samplerate.cpp)
+
 target_link_libraries(example gmock_main)
+
 add_test(NAME example_test COMMAND example)
+add_test(NAME example_test COMMAND samplerate)
