--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -35,4 +35,5 @@ file(GLOB SRCS *.cpp)
 add_executable(samplerate ${SRCS})
 
 target_link_libraries(samplerate gmock_main)
- add_test(NAME samplerate_test COMMAND samplerate)
+
+add_test(NAME samplerate_test COMMAND example samplerate)
