--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -34,6 +34,7 @@ endif()
 file(GLOB SRCS *.cpp)
 add_executable(samplerate ${SRCS})
 
-target_link_libraries(samplerate gmock_main)
+target_link_libraries(example samplerate gmock_main)
 
-add_test(NAME samplerate_test COMMAND example samplerate)
+add_test(NAME example_test COMMAND example)
+add_test(NAME samplerate_test COMMAND samplerate)
