--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -31,10 +31,18 @@ if (CMAKE_VERSION VERSION_LESS 2.8.11)
 endif()
 
 # Now simply link against gtest or gtest_main as needed. Eg
-file(GLOB SRCS *.cpp)
-add_executable(samplerate ${SRCS})
+# file(GLOB SRCS *.cpp)
+# add_executable(samplerate ${SRCS})
 
-target_link_libraries(samplerate gmock_main)
+# target_link_libraries(samplerate gmock_main)
 
+
+# add_test(NAME samplerate_test COMMAND samplerate)
+
+add_executable(example example.cpp)
+target_link_libraries(example gmock_main)
 add_test(NAME example_test COMMAND example)
+
+add_executable(samplerate samplerate.cpp)
+target_link_libraries(samplerate gmock_main)
 add_test(NAME samplerate_test COMMAND samplerate)
