--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -39,9 +39,9 @@ endif()
 
 # add_test(NAME samplerate_test COMMAND samplerate)
 
-add_executable(example example.cpp)
-target_link_libraries(example gmock_main)
-add_test(NAME example_test COMMAND example)
+# add_executable(example example.cpp)
+# target_link_libraries(example gmock_main)
+# add_test(NAME example_test COMMAND example)
 
 add_executable(samplerate samplerate.cpp)
 target_link_libraries(samplerate gmock_main)
