--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -42,7 +42,9 @@ endif()
 # add_executable(example example.cpp)
 # target_link_libraries(example gmock_main)
 # add_test(NAME example_test COMMAND example)
+set(PROJECT_TEST_NAME sampletest_test)
 
 add_executable(samplerate samplerate.cpp)
+add_dependencies(${PROJECT_TEST_NAME} googletest)
 target_link_libraries(samplerate gmock_main)
 add_test(NAME samplerate_test COMMAND samplerate)
