--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -31,5 +31,5 @@ if (CMAKE_VERSION VERSION_LESS 2.8.11)
 endif()
 
 add_executable(samplerate samplerate.cpp)
-target_link_libraries(samplerate gtest_main)
+target_link_libraries(samplerate_test googletest gtest_main)
 add_test(NAME samplerate COMMAND samplerate)
