--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -33,5 +33,5 @@ endif()
 # Now simply link against gtest or gtest_main as needed. Eg
 file(GLOB TEST_SRC_FILES *.cpp)
 add_executable(runUnitTests ${TEST_SRC_FILES})
-target_link_libraries(samplerate gtest_main)
-add_test(NAME samplerate_test COMMAND samplerate)
+target_link_libraries(runUnitTests gtest_main)
+add_test(NAME samplerate_test COMMAND runUnitTests)
