--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,11 +9,11 @@ SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 #	SOURCE CODE
 #-------------------------------------------------------------------------------
 set(INCLUDE_DIRS 
-  ${PROJECT_SOURCE_DIR}/include
-  ${PROJECT_SOURCE_DIR}/include/common/utils
+  ${CMAKE_SOURCE_DIR}/include
+  ${CMAKE_SOURCE_DIR}/include/common/utils
 )
 file(GLOB SOURCE_FILES "src/*.cpp")
-list(REMOVE_ITEM SOURCE_FILES ${PROJECT_SOURCE_DIR}/src/Main.cpp)
+list(REMOVE_ITEM SOURCE_FILES ${CMAKE_SOURCE_DIR}/src/Main.cpp)
 
 # on windows, append headers to source so they show up in visual studio
 if(WIN32)
