--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -32,6 +32,6 @@ endif()
 
 # Now simply link against gtest or gtest_main as needed. Eg
 file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/test/*.cpp)
-add_executable(runUnitTests ${TEST_SRC_FILES})
-target_link_libraries(runUnitTests gtest_main)
-add_test(NAME samplerate_test COMMAND runUnitTests)
+add_executable(samplerate ${TEST_SRC_FILES})
+target_link_libraries(samplerate gtest_main)
+add_test(NAME samplerate_test COMMAND samplerate)
