--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,5 +128,7 @@ INCLUDE(InstallRequiredSystemLibraries)
 #	TEST
 #-------------------------------------------------------------------------------
 
-enable_testing()
-add_subdirectory(test)
+if (BUILD_TESTS)
+ enable_testing()
+ add_subdirectory(test)
+endif()
