--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -31,7 +31,9 @@ if (CMAKE_VERSION VERSION_LESS 2.8.11)
 endif()
 
 # Now simply link against gtest or gtest_main as needed. Eg
+
 file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/test/*.cpp)
+
 add_executable(samplerate ${TEST_SRC_FILES})
-target_link_libraries(samplerate gtest_main)
+target_link_libraries(samplerate gtest gtest_main)
 add_test(NAME samplerate_test COMMAND samplerate)
