--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -34,6 +34,7 @@ endif()
 
 file(GLOB TEST_SRC_FILES ${CMAKE_SOURCE_DIR}/test/*.cpp)
 
-add_executable(samplerate ${TEST_SRC_FILES})
+# add_executable(samplerate ${TEST_SRC_FILES})
+add_executable(samplerate samplerate.cpp)
 target_link_libraries(samplerate gtest_main$
 add_test(NAME samplerate_test COMMAND samplerate)
