--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -32,8 +32,10 @@ endif()
 
 # Now simply link against gtest or gtest_main as needed. Eg
 
-file(GLOB TEST_SRC_FILES ${CMAKE_SOURCE_DIR}/test/*.cpp)
+file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/test/*.cpp)
+
 include_directories(${CMAKE_SOURCE_DIR}/include)
+
 # add_executable(samplerate ${TEST_SRC_FILES})
 add_executable(samplerate samplerate.cpp)
 target_link_libraries(samplerate gmock_main)
