--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -35,7 +35,7 @@ endif()
 file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/test/*.cpp)
 
 include_directories(${INCLUDE_DIRS})
-
+message("-- Added include dir ${INCLUDE_DIRS}")
 # add_executable(samplerate ${TEST_SRC_FILES})
 add_executable(samplerate samplerate.cpp)
 target_link_libraries(samplerate gmock_main)
