--- a/.travis.yml
+++ b/.travis.yml
@@ -29,5 +29,5 @@ script:
   - cmake -D CMAKE_BUILD_TYPE=Release ../../ 
   - make
   - ctest
-  - cd ../../
+  - cd ../../src/
   - cppcheck --enable=all --std=c++11 --verbose --error-exitcode=1 --language=c++ -ibuild/Debug/googletest-src/ -ibuild/Release/googletest-src/
