--- a/.travis.yml
+++ b/.travis.yml
@@ -30,4 +30,4 @@ script:
   - make
   - ctest
   - cd ../../src/
-  - cppcheck --enable=all --std=c++11 --verbose --error-exitcode=1 --language=c++ -ibuild/Debug/googletest-src/ -ibuild/Release/googletest-src/
+  - cppcheck --enable=all --quiet --error-exitcode=1 --language=c++ -ibuild/Debug/googletest-src/ -ibuild/Release/googletest-src/
