--- a/.travis.yml
+++ b/.travis.yml
@@ -29,5 +29,4 @@ script:
   - cmake -D CMAKE_BUILD_TYPE=Release ../../ 
   - make
   - ctest
-  - cd ../../src/
-  - cppcheck --enable=all --quiet --error-exitcode=1 --language=c++ -ibuild/Debug/googletest-src/ -ibuild/Release/googletest-src/
+  - cppcheck --enable=all --error-exitcode=1 --std=c++11 --verbose --language=c++ -ibuild/Debug/googletest-src/ -ibuild/Release/googletest-src/ ../../
