--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,11 @@ script:
   - gcc -v && g++ -v && cmake --version
   - mkdir test/googletest-download
   - mkdir build
-  - mkdir build/Debug && mkdir build/Release
   - cd build/Debug
-  - cmake -D CMAKE_BUILD_TYPE=Debug ../../
+  - cmake -D CMAKE_BUILD_TYPE=Debug ..
   - make
   - ctest
+  - ls
   - cd ../Release
   - cmake -D CMAKE_BUILD_TYPE=Release ../../ 
   - make
