--- a/.travis.yml
+++ b/.travis.yml
@@ -19,14 +19,13 @@ script:
   - export CXX=/usr/bin/g++-6
   - gcc -v && g++ -v && cmake --version
   - mkdir test/googletest-download
-  - mkdir build
+  - mkdir build/Debug && mkdir build/Release
   - cd build/Debug
-  - cmake -D CMAKE_BUILD_TYPE=Debug ..
+  - cmake -D CMAKE_BUILD_TYPE=Debug ../../
   - make
   - ctest
-  - ls
   - cd ../Release
-  - cmake -D CMAKE_BUILD_TYPE=Release ../../ 
+  - cmake -D CMAKE_BUILD_TYPE=Release ../../
   - make
   - ctest
   - cppcheck --enable=all --check-config --error-exitcode=1 --std=c++11 --verbose --language=c++ -ibuild/Debug/googletest-src/ -ibuild/Release/googletest-src/ -ibuild/Debug/CMakeFiles/ -ibuild/Release/CMakeFiles/ -I../../include/ ../../
