--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -42,5 +42,6 @@ message("-- Added include dir {$INCLUDE_DIRS}")
 
 # add_executable(samplerate ${TEST_SRC_FILES})
 add_executable(samplerate samplerate.cpp)
+target_include_directories(samplerate {$INCLUDE_DIRS})
 target_link_libraries(samplerate gmock_main)
 add_test(NAME samplerate_test COMMAND samplerate)
