--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -32,3 +32,6 @@ endif()
 
 # include export headers for shared libraries
 include_directories(${CMAKE_BINARY_DIR}/exports/)
+
+# import test directories
+ADD_SUBDIRECTORY(audio/)
