Try gtest module

--- a/test/audio/CMakeLists.txt
+++ b/test/audio/CMakeLists.txt
@@ -7,4 +7,5 @@ include_directories( ${INCLUDE_DIRS} )
 
 add_executable(audiotst ${TEST_SRC_FILES})
 target_link_libraries(audiotst audio gmock_main)
-add_test(NAME audio_test COMMAND audiotst)
+# add_test(NAME audio_test COMMAND audiotst)
+gtest_add_tests(audiotst "${FooTestArgs}" AUTO)
