Add fsystem to build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ FILE( GLOB_RECURSE PROJ_SOURCES src/*.cpp )
 FILE( GLOB_RECURSE PROJ_HEADERS inc/*.h )
 
 ADD_SUBDIRECTORY( ${CMAKE_SOURCE_DIR}/src/audio/ )
+ADD_SUBDIRECTORY( ${CMAKE_SOURCE_DIR}/src/fsystem/ )
 ADD_SUBDIRECTORY( ${CMAKE_SOURCE_DIR}/test/ )
 
 #-------------------------------------------------------------------------------
