--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -34,7 +34,5 @@ endif()
 include_directories(${CMAKE_BINARY_DIR}/exports/)
 
 # import test directories
-ADD_SUBDIRECTORY(
-  audio/
-  os/
-)
+ADD_SUBDIRECTORY(audio/)
+ADD_SUBDIRECTORY(os/)
