--- a/src/os/CMakeLists.txt
+++ b/src/os/CMakeLists.txt
@@ -15,7 +15,7 @@ SET( PROJ_OUT_PATH  ${CMAKE_BINARY_DIR} )
 SET( PROJ_LIBRARIES "" )
 SET( PROJ_INCLUDES  ${CMAKE_SOURCE_DIR}/include ${CMAKE_BINARY_DIR}/exports)
 PROJECT( ${PROJ_NAME} VERSION 0.0.1 )
-ADD_DEFINITIONS( -DOS_WORLD )
+ADD_DEFINITIONS( -DOS_EXPORT )
 
 #-------------------------------------------------------------------------------
 #	SOURCE CODE
